--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
@@ -32,7 +32,7 @@
 
       gtag('config', 'G-XJ1TKX98EW');
     </script>
-    <title>React App</title>
+    <title>Bi-ll</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
