--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -32,6 +32,12 @@
 
       gtag('config', 'G-XJ1TKX98EW');
     </script>
+    <!-- Google AdSense -->
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4116238563422892"
+      crossorigin="anonymous"
+    ></script>
     <title>Bi-ll</title>
   </head>
   <body>
