--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -39,7 +39,7 @@
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4116238563422892"
       crossorigin="anonymous"
     ></script>
-    <title>Bi-ll</title>
+    <title>Bi-ll :: Split the bill</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
