--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en" translate="no">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo/icon-72.png" />
+    <link rel="icon" href="%PUBLIC_URL%/logo/icon-android-72.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -10,7 +10,7 @@
       content="必有分帳，同儕出遊輕鬆分帳無負擔，免註冊、輕鬆安裝、簡單分享。Bi-ll is a convenient too for splitting the bills. Let's Split the Bill easily."
     />
     <meta name="agd-partner-manual-verification" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo/icon-192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo/icon-ios-180.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
