--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo/icon-android-72.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#ffffff" />
     <meta
       name="description"
-      content="必有分帳，同儕出遊輕鬆分帳無負擔，免註冊、輕鬆安裝、簡單分享。Bi-ll is a convenient too for splitting the bills. Let's Split the Bill easily."
+      content="必有分帳，最實用的分帳程式，同儕出遊輕鬆分帳無負擔，免註冊、輕鬆安裝、簡單分享。 Bi-ll is a convenient web app tool for splitting the bills. Let's Split the Bill easily."
     />
     <meta name="agd-partner-manual-verification" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo/icon-ios-180.png" />
