change domain name

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#ffffff" />
     <meta
       name="description"
-      content="必有分帳，最實用的分帳程式，同儕出遊輕鬆分帳無負擔，免註冊、輕鬆安裝、簡單分享。 Bi-ll is a convenient web app tool for splitting the bills. Let's Split the Bill easily."
+      content="最實用的分帳程式，同儕出遊輕鬆分帳無負擔，免註冊、輕鬆安裝、簡單分享。 Bunny Bill is a convenient web app tool for splitting the bills. Let's Split the Bill easily."
     />
     <meta name="agd-partner-manual-verification" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo/icon-ios-180.png" />
@@ -26,7 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XJ1TKX98EW"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DN5XBXXQMJ"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -34,7 +34,7 @@
       }
       gtag('js', new Date());
 
-      gtag('config', 'G-XJ1TKX98EW');
+      gtag('config', 'G-DN5XBXXQMJ');
     </script>
     <!-- Google AdSense -->
     <script
@@ -52,7 +52,7 @@
         });
       }
     </script>
-    <title>Bi-ll :: Split the bill</title>
+    <title>Bunny Bill</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
