--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#ffffff" />
     <meta
       name="description"
-      content="最實用的分帳程式，同儕出遊輕鬆分帳無負擔，免註冊、輕鬆安裝、簡單分享。 Bunny Bill is a convenient web app tool for splitting the bills. Let's Split the Bill easily."
+      content="最實用的分帳程式，同儕出遊輕鬆分帳無負擔，免註冊、輕鬆安裝、簡單分享。 Bunny Bill is a convenient web app tool which provides an easy way to splitting the bills. Let's Split the Bill easily."
     />
     <meta name="agd-partner-manual-verification" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo/icon-ios-180.png" />
@@ -52,7 +52,7 @@
         });
       }
     </script>
-    <title>Bunny Bill</title>
+    <title>Bunny Bill :: An easy way to split bills</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
