update google related code

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -34,12 +34,12 @@
       }
       gtag('js', new Date());
 
-      gtag('config', 'G-DN5XBXXQMJ');
+      gtag('config', 'G-E553HS837T');
     </script>
     <!-- Google AdSense -->
     <script
       async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4116238563422892"
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8632821351669245"
       crossorigin="anonymous"
     ></script>
     <script>
