--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,7 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DN5XBXXQMJ"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E553HS837T"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
