--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#ffffff" />
     <meta
       name="description"
-      content="最實用的分帳程式，同儕出遊輕鬆分帳無負擔，免註冊、輕鬆安裝、簡單分享。 Bunny Bill is a convenient web app tool which provides an easy way to splitting the bills. Let's Split the Bill easily."
+      content="你是否很常時與好友們一同出遊呢？如果是的話，你應該在尋找一個跟朋友分帳的方法吧！Bunny Bill 是個非常實用的分帳程式，同儕出遊輕鬆分帳無負擔，免註冊登入，不用下載安裝，只要有瀏覽器就可以使用，很輕易的與朋友分享帳本，帳目清晰，介面易懂，快來跟朋友一起使用這個 Bunny Bill 分帳程式吧！"
     />
     <meta name="agd-partner-manual-verification" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo/icon-ios-180.png" />
@@ -52,7 +52,7 @@
         });
       }
     </script>
-    <title>Bunny Bill :: An easy way to split bills</title>
+    <title>Bunny Bill :: An easy way to split bills | Celestial Studio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
