--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#ffffff" />
     <meta
       name="description"
-      content="你是否很常時與好友們一同出遊呢？如果是的話，你應該在尋找一個跟朋友分帳的方法吧！Bunny Bill 是個非常實用的分帳程式，同儕出遊輕鬆分帳無負擔，免註冊登入，不用下載安裝，只要有瀏覽器就可以使用，很輕易的與朋友分享帳本，帳目清晰，介面易懂，快來跟朋友一起使用這個 Bunny Bill 分帳程式吧！"
+      content="Bunny Bill 是個非常實用的朋友分帳程式，提供同儕出遊輕鬆分帳、無負擔，免註冊登入，不用下載安裝，只要有瀏覽器就可以使用，很輕易的與朋友分享帳本，帳目清晰，介面易懂，快來跟朋友一起使用這個 Bunny Bill 分帳程式吧！"
     />
     <meta name="agd-partner-manual-verification" />
     <link rel="apple-touch-icon" href="/logo/icon-ios-180.png" />
@@ -29,6 +29,24 @@
       crossorigin="anonymous"
     ></script>
     <title>Bunny Bill :: An easy way to split bills | Celestial Studio</title>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "url": "https://bunnybill.celestialstudio.net/",
+        "name": "Bunny Bill :: An easy way to split bills | Celestial Studio",
+        "description": "Bunny Bill 是個非常實用的朋友分帳程式，提供同儕出遊輕鬆分帳、無負擔，免註冊登入，不用下載安裝，只要有瀏覽器就可以使用，很輕易的與朋友分享帳本，帳目清晰，介面易懂，快來跟朋友一起使用這個 Bunny Bill 分帳程式吧！",
+        "inLanguage": "zh-Hant",
+        "publisher": {
+          "@type": "Organization",
+          "name": "Celestial Studio",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://bunnybill.celestialstudio.net/logo/icon-android-72.png"
+          }
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
